src/objects/Provider_Association__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Providers</relationshipLabel>
        <relationshipName>Provider_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Provider Associations</relationshipLabel>
        <relationshipName>Provider_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_Association_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Provider Association Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipLabel>Provider Associations</relationshipLabel>
        <relationshipName>Provider_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specialty</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Provider Association</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_on_Name_field_Change</fullName>
        <active>true</active>
        <description>Prevent editable Name filed for CHN profile</description>
        <errorConditionFormula>AND( ISCHANGED( Name ), $User.ProfileId = &apos;00e5f000000rGgG&apos; )</errorConditionFormula>
        <errorMessage>You can&apos;t edit this record.</errorMessage>
    </validationRules>
</CustomObject>